Fix PopPizza image alignment

--- a/styles/PopPizzaItem.module.scss
+++ b/styles/PopPizzaItem.module.scss
@@ -1,6 +1,10 @@
 @import "globals.scss";
 .container {
     margin-bottom: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .h2 {
